[package]
name = "hyper-examples"
version = "0.1.0"
authors = ["Mats Kindahl <mats.kindahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "~0.13"
tokio = { version = "~0.2", features = ["full"] }
futures = "0.3"
futures-util = { version = "~0.3", default-features = false, features = ["alloc"] }
url = "1.0"
log = "~0.4"
env_logger = "~0.8"
